Navigation fix -- BREW LAB was not aligned in the middle

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -8,6 +8,7 @@
   padding: 1rem 3rem;
   display: flex;
   justify-content: space-between;
+  align-content: center;
   align-items: center;
 
   &__bar {
